Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,089
    • Issues 3,089
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1,008
    • Merge requests 1,008
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • MesaMesa
  • mesamesa
  • Issues
  • #4032
Closed
Open
Issue created Dec 30, 2020 by R M@ugly

Wasteland 3: Artifacts with Ambient Occlusion Enabled

Description

Using the native Linux Version of Wasteland 3 (Steam) results in visual artifacts when the Ambient Occlusion setting is turned ON.

Visual artifacts generally appear as flickering black bars during gameplay.

Turning off Ambient Occlusion in the game's display settings results in no visual artifacts. Other display settings do not have an impact.

Wasteland 3 is a Unity engine game. This seems similar to #1336 (closed) and #2878 (closed)

As with the above issues, running the game with AMD_DEBUG=nodcc %command% results in no visual artifacts with ambient occlusion enabled.

Screenshots/video files

With Ambient Occlusion enabled: amb-on

With Ambient Occlusion disabled: amb-off

Log files (for system lockups / game freezes / crashes)

Game does not lock up or hang. Game is playable even with visual artifacts.

Steps to reproduce

The visual artifacts can be reproduced when starting gameplay.

  1. From the gameplay options, under the Display options, make sure that the Ambient Occlusion setting is ON
  2. Start new game and proceed past the difficulty selection, character creation and introduction video sequence
  3. The gameplay starts with a combat sequence. The flickering, black visual artifacts should be noticeable while the combat begins to play out (before the player has control)
  4. Easiest way to reproduce is that once the player has control, zoom in and out (scroll mousewheel up and down to zoom camera in and out)

System information

inxi -GSC -xx
System:
  Host: Kernel: 5.8.0-33-generic x86_64 bits: 64 compiler: N/A 
  Desktop: Cinnamon 4.6.7 wm: muffin dm: LightDM 
  Distro: Linux Mint 20 Ulyana base: Ubuntu 20.04 focal 
CPU:
  Topology: 6-Core model: AMD Ryzen 5 3600 bits: 64 type: MT MCP arch: Zen 
  L2 cache: 3072 KiB 
  flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm 
  bogomips: 86402 
  Speed: 2199 MHz min/max: 2200/3600 MHz Core speeds (MHz): 1: 2199 2: 2199 
  3: 2200 4: 2199 5: 2196 6: 2200 7: 2200 8: 2200 9: 2199 10: 2200 11: 2199 
  12: 2199 
Graphics:
  Device-1: AMD Ellesmere [Radeon RX 470/480/570/570X/580/580X/590] 
  vendor: XFX Pine driver: amdgpu v: kernel bus ID: 26:00.0 
  chip ID: 1002:67df 
  Display: x11 server: X.Org 1.20.8 driver: amdgpu,ati 
  unloaded: fbdev,modesetting,vesa 
  resolution: 1920x1080~60Hz, 1920x1080~60Hz 
  OpenGL: renderer: Radeon RX 570 Series (POLARIS10 DRM 3.38.0 
  5.8.0-33-generic LLVM 11.0.0) 
  v: 4.6 Mesa 20.3.1 - kisak-mesa PPA direct render: Yes

Regression

Unknown. The game was released for Linux in late December 2020 and the issue was present on release.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking